--- a/src/Makefile
+++ b/src/Makefile
@@ -309,8 +309,8 @@ endif
 
 ### 3.1 Selecting compiler (default = gcc)
 CXXFLAGS += -g -Wall -Wcast-qual -fno-exceptions -std=c++17 -fopenmp -I. $(EXTRACXXFLAGS)
-LDFLAGS += -fopenmp
-DEPENDFLAGS += -std=c++17 -I. $(EXTRALDFLAGS)
+LDFLAGS += -fopenmp $(EXTRALDFLAGS)
+DEPENDFLAGS += -std=c++17 -I.
 
 ifeq ($(COMP),)
 	COMP=gcc
